--- a/app/src/main/res/layout/base_title.xml
+++ b/app/src/main/res/layout/base_title.xml
@@ -44,6 +44,7 @@
 
 
         <RelativeLayout
+            android:background="@drawable/button_selector"
             android:id="@+id/rl_save"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/dp_30"
