--- a/app/src/main/res/layout/rcy_configure_item.xml
+++ b/app/src/main/res/layout/rcy_configure_item.xml
@@ -73,7 +73,7 @@
                 android:layout_width="@dimen/dp_50"
                 android:layout_height="@dimen/dp_25"
                 android:layout_centerInParent="true"
-                android:background="@drawable/button_shape">
+                android:background="@drawable/button_selector">
 
                 <TextView
                     android:layout_width="wrap_content"
